...
                                <connections>
                                    <outlet property="delegate" destination="EZZ-XV-eLr" id="jGr-T9-fam"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yyf-q5-Z83" userLabel="Back Button">
                                <rect key="frame" x="8" y="56" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="backward"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="Sbr-a0-9Lk"/>
                                    <constraint firstAttribute="width" constant="24" id="ajq-eg-sZO"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
                                    <constraint firstAttribute="height" constant="60" id="vR5-R8-o9t"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="APx-CO-V2e" userLabel="Enter Button">
                                <rect key="frame" x="16" y="690" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="qwW-5D-I5L"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
...
                                <color key="backgroundColor" name="YP White (iOS)"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dRt-rt-7az">
                                <rect key="frame" x="0.0" y="96" width="414" height="4"/>
                                <color key="progressTintColor" name="YP Black (iOS)"/>
                            </progressView>
...
