...
        setupGradient()
    }
    
    func setLikeButtonImage(isLiked: Bool) {
        let imageResource: ImageResource = isLiked ? .active : .noActive
        likeButton.setImage(UIImage(resource: imageResource), for: .normal)
        likeButton.accessibilityIdentifier = isLiked ? "like_button_on" : "like_button_off"
    }
    
    func setupGradient() {
        guard gradientLayer.superlayer == nil else { return }
        let darkColor = UIColor(red: 26/255, green: 27/255, blue: 34/255, alpha: 1.0)
        
...
